@@ -18,6 +18,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -44,11 +45,11 @@ public class SecurityConfig {
                         // Public auth endpoints (paths relative to context-path /api)
                         .requestMatchers("/v1/auth/register", "/v1/auth/login", "/v1/auth/refresh-token", "/v1/merchant/**").permitAll()
                         .requestMatchers("/v1/auth/verify-email", "/v1/auth/forgot-password", "/v1/auth/reset-password").permitAll()
-                        // Public read endpoints
-                        .requestMatchers(HttpMethod.GET, "/home/**", "/search/**", "/stores/**", "/menu-items/**", "/locations/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/v1/home/**", "/v1/search/**", "/v1/stores/**", "/v1/menu-items/**", "/v1/locations/**", "/v1/store-categories/**").permitAll()
+                        .requestMatchers("/v1/merchant/login", "/v1/merchant/register").permitAll()
+                        .requestMatchers("/v1/merchant/**").hasRole("MERCHANT")
                         .requestMatchers("/payments/webhook").permitAll()
                         .requestMatchers("/ws/**").permitAll()
-                        // Everything else requires auth
                         .anyRequest().authenticated()
                 )
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
@@ -64,14 +65,18 @@ public class SecurityConfig {
         registration.setEnabled(false);
         return registration;
     }
-
+    // tạm thời
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
-        configuration.setExposedHeaders(List.of("Authorization"));
+        configuration.setAllowedOrigins(Arrays.asList(
+            "http://localhost:5173",  // Vite dev server
+            "http://localhost:3000"  // Backend
+        ));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setExposedHeaders(Arrays.asList("Authorization"));
+        configuration.setAllowCredentials(true);  // CRITICAL: Enable cookies/credentials
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
